# multiversion

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .sourceheaders.toml  .travis.yml  CODE_OF_CONDUCT.md  README.md  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: branch-build.yaml  build.yaml  build.yml  deploy-github-pages.yaml  deploy-pypi.yaml  release.yaml
.pre-commit/: version_check.py
assets/: gh-pages-redirect.html
docs/: changelog.rst  conf.py  configuration.rst  context.rst  faq.rst  github_pages.rst  gitlab_pages.rst  index.rst  install.rst  quickstart.rst  templates.rst
master/: .buildinfo  changelog.html  configuration.html  context.html  faq.html  genindex.html  github_pages.html  index.html  install.html  quickstart.html  search.html  searchindex.js  templates.html
master/.doctrees/: changelog.doctree  configuration.doctree  context.doctree  environment.pickle  faq.doctree  github_pages.doctree  index.doctree  install.doctree  quickstart.doctree  templates.doctree
sphinx_multiversion/: __init__.py  __main__.py  git.py  main.py  sphinx.py
tests/: __init__.py  test_sphinx.py
v0.1.1/: .buildinfo  changelog.html  configuration.html  context.html  faq.html  genindex.html  github_pages.html  index.html  install.html  objects.inv  quickstart.html  search.html  searchindex.js  templates.html
v0.2.0/: .buildinfo  changelog.html  configuration.html  context.html  faq.html  genindex.html  github_pages.html  index.html  install.html  quickstart.html  search.html  searchindex.js  templates.html
v0.2.1/: .buildinfo  changelog.html  configuration.html  context.html  faq.html  genindex.html  github_pages.html  index.html  install.html  quickstart.html  search.html  searchindex.js  templates.html
v0.2.2/: .buildinfo  changelog.html  configuration.html  context.html  faq.html  genindex.html  github_pages.html  index.html  install.html  objects.inv  quickstart.html  search.html  searchindex.js  templates.html
v0.2.3/: .buildinfo  changelog.html  configuration.html  context.html  faq.html  genindex.html  github_pages.html  index.html  install.html  quickstart.html  search.html  searchindex.js  templates.html
v0.2.4/: .buildinfo  changelog.html  configuration.html  context.html  faq.html  genindex.html  github_pages.html  index.html  install.html  quickstart.html  search.html  searchindex.js  templates.html
(+72 files in other folders)
